Favorite button button add to polaylist button playlist and pop up window to insert the name of playlist